--- a/Week6/Story 3.ipynb
+++ b/Week6/Story 3.ipynb
@@ -5,8 +5,8 @@
    "id": "1eb1636f-6e91-4e2b-8a92-cceeb663e245",
    "metadata": {},
    "source": [
-    "## Shamecca Marshall\n",
-    "## Data 608 - Story 3"
+    "# Shamecca Marshall\n",
+    "# Data 608 - Story 3"
    ]
   },
   {
@@ -4869,6 +4869,19 @@
     "\n",
     "# Show plot\n",
     "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07d00b5d-3442-4cdd-9b4f-2e1c82064990",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "Based on the data depicted in the choropleth heat maps, during the year 2023, individuals residing in Mississippi faced heightened vulnerability to gun violence deaths, with a mortality rate of 28.3 and the state's gun law rank being categorized as the least strict. Conversely, residents in Rhode Island exhibited a lower likelihood of being victims of gun violence deaths, with a mortality rate of 3.7 and the state's gun law rank classified as strict. Similarly, Massachusetts demonstrated a mortality rate of 3.8 for gun violence deaths, accompanied by the most stringent gun law rank.\n",
+    "\n",
+    "The analysis reveals a clear trend: states with stricter gun laws exhibit lower rates of gun violence deaths. This observation is evidenced by the fact that eight states, including California, Hawaii, Illinois, New York, New Jersey, Maryland, Massachusetts, and Connecticut, boasting the strictest gun law ranks, display the safest to safe gun violence (mortality) rates on the Likert scale. Conversely, twenty-six states, including Montana, North Dakota, South Dakota, Idaho, Wyoming, Utah, Arizona, Alaska, Iowa, Missouri, Kansas, Oklahoma, Texas, Arkansas, Louisiana, Indiana, Ohio, West Virginia, Kentucky, Tennessee, Mississippi, Alabama, Georgia, South Carolina, New Hampshire, and Maine, with a gun law rank of 1 (Most Lax) on the Likert scale, exhibit moderate to deadliest gun violence (mortality) rates.\n",
+    "\n",
+    "This analysis suggests a correlation between lax gun law ranks and higher rates of gun violence. States with lenient gun control laws tend to attract individuals engaged in criminal activities, psychopathy, or juvenile delinquency, contributing to higher rates of firearm-related crimes. Consequently, implementing stricter firearm control laws emerges as a crucial measure in reducing firearm mortality rates."
    ]
   }
  ],
